# breakout

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp
gamelib/: CMakeLists.txt
gamelib/include/: GameMain.h
gamelib/src/: GameMain.cpp
include/: BreakoutBall.h  BreakoutLevel.h  BreakoutPaddle.h  GameClock.h  GameMain.h  GameObject.h  GameState.h  Handle.h  Resources.h  SDL_GLWindow.h  SDL_window.h  Screen.h  Shader.h  Sprite.h  Texture2d.h
levels/: levelone.json
shaders/: sprite_fragment.glsl
src/: BreakoutBall.cpp  BreakoutLevel.cpp  BreakoutPaddle.cpp  GameClock.cpp  GameMain.cpp  GameObject.cpp  Resources.cpp  SDL_GLWindow.cpp  SDL_window.cpp  Shader.cpp  Sprite.cpp  Texture2d.cpp
textures/raw/: block.kra  breakout_ball.kra  breakout_paddle.kra  solid_block.kra
win32/: .gitignore  Breakout.sln  Breakout.vcxproj  Breakout.vcxproj.filters
